Change bootstrap references

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -6,8 +6,8 @@
 	content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <title>GithubFinder</title>
 
-<link href="https://bootswatch.com/4/sketchy/bootstrap.min.css"
-	rel="stylesheet">
+<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" />
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 <link rel="stylesheet" href="style.css" />
 
 </head>
